Simplified code with Stream.toList() (Java SE 16+).